--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,26 @@ a {
   font-family: inherit;
   color: white;
 }
+
+.quote-content {
+  position: relative;
+  transition: opacity 1s ease-in-out;
+}
+
+.fade-enter {
+  opacity: 0;
+}
+
+.fade-enter-active {
+  opacity: 1;
+  transition: opacity 1s ease-in-out;
+}
+
+.fade-exit {
+  opacity: 1;
+}
+
+.fade-exit-active {
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
